--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <script src="./model2/personal-info.js"></script>
+    <script src="./model2/client.js"></script>
+    <script src="./model2/employee.js"></script>
     <script src="./model/point.js"></script>
     <script src="./model/segment.js"></script>
     <script src="./model/triangle.js"></script>
